# text_mining

./: AUTHORS  CMakeLists.txt  README.md  subject.txt
app/: CMakeLists.txt  main_app.cpp  main_compiler.cpp
src/: CMakeLists.txt  cptrie.cpp  cptrie.hpp  cptriedisk.cpp  cptriedisk.hpp  main_compiler.cpp  ptrie.cpp  ptrie.hpp
tests/: CMakeLists.txt  main.cpp  test.py
